Updated styling to error messages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           placeholder="Password"
         />
       </div>
-
+      <span id="emptyResult"></span>
       <button type="submit" class="login-button" onclick="doLogin()">Login</button>
       <span id="loginResult"></span>
       
