Updated styling to error messages

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
           placeholder="Password"
         />
       </div>
-      <span id="emptyResult"></span>
-      <button type="submit" class="login-button" onclick="doLogin()">Login</button>
-      <span id="loginResult"></span>
+      <div>
+        <p id="emptyResult"></p>
+        <p id="loginResult"></p>
+        <button type="submit" class="login-button" onclick="doLogin()">Login</button>
+      </div>
       
       <div>
         <a class="sign-up" href="signUp.html"> Dont't have an account?</a>
