Updated styling to error messages

--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
           placeholder="Password"
         />
       </div>
-      <div>
+      <div id="message">
         <p id="emptyResult"></p>
-        <p id="loginResult"></p>
+        <p id="loginResult"></p>  
+      </div>
+      <div>
         <button type="submit" class="login-button" onclick="doLogin()">Login</button>
       </div>
       
       <div>
-        <a class="sign-up" href="signUp.html"> Dont't have an account?</a>
+        <a class="sign-up" href="signUp.html"> Don't have an account?</a>
       </div>
       <!-- </form> -->
     </div>
