--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Login LAMP Stack</title>
     <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/md5.js"></script>
     <link href="css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
