Added functionality to Sign Up and Updated Styling

--- a/signUp.html
+++ b/signUp.html
@@ -71,7 +71,7 @@
         <p id="notValid"></p>  
       </div>
       
-      <div style="text-align: center">
+      <div class="termStyle" style="text-align: center">
         <input class="terms" type="checkbox" style="cursor: pointer" />
         <label class="terms-text" for="terms"
           >I agree with
