--- a/signUp.html
+++ b/signUp.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="js/signUp.js"></script>
     <script type="text/javascript" src="js/md5.js"></script>
     <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +18,7 @@
     <div class="sign-up-container">
       <h1 class="create-h1">Create New Account</h1>
       <div id="createdAccount">
-        <p id="accountCreated"></p> 
+        <p id="accountCreated"></p>
       </div>
       <div class="firstlastName" style="text-align: center">
         <input
@@ -68,9 +69,9 @@
 
       <div id="message2">
         <p id="isEmpty"></p>
-        <p id="notValid"></p>  
+        <p id="notValid"></p>
       </div>
-      
+
       <div class="termStyle" style="text-align: center">
         <input class="terms" type="checkbox" style="cursor: pointer" />
         <label class="terms-text" for="terms"
@@ -80,7 +81,19 @@
       </div>
 
       <div style="text-align: center">
-        <button class="create-button" type="submit" onclick="isValid();">Create Account</button>
+        <button class="create-button" type="submit" onclick="isValid();">
+          Create Account
+        </button>
+      </div>
+      <div>
+        <p class="already-have-account" style="text-align: center">
+          Already have an account?<a
+            class="link-already-have-account"
+            href="login.html"
+          >
+            Sign in
+          </a>
+        </p>
       </div>
     </div>
   </body>
