Complete functionality, and updated css and html

--- a/signUp.html
+++ b/signUp.html
@@ -5,7 +5,6 @@
     <script type="text/javascript" src="js/signUp.js"></script>
     <script type="text/javascript" src="js/md5.js"></script>
     <link href="css/style.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -70,6 +69,9 @@
       <div id="message2">
         <p id="isEmpty"></p>
         <p id="notValid"></p>
+        <p id="duplicateAccount"></p>
+        <p id="isSecure"></p>
+
       </div>
 
       <div class="termStyle" style="text-align: center">
@@ -89,7 +91,7 @@
         <p class="already-have-account" style="text-align: center">
           Already have an account?<a
             class="link-already-have-account"
-            href="login.html"
+            href="index.html"
           >
             Sign in
           </a>
